# datastuff

./: .pre-commit-config.yaml  .pylintrc  CHANGELOG.rst  README.md  pyproject.toml  tox.ini
.github/workflows/: build.yaml  publish.yaml
changelog.d/: 20220905_165143_benthecoder07.rst
tests/: test_datastuff.py
